--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "electron-quick-start",
+  "name": "aoe3hotkeys",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A hotkey editing tool for Age of Empires 3.",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/zxj001/aoe3hotkeys",
   "keywords": [
     "Electron",
     "quick",
@@ -14,9 +14,12 @@
     "tutorial",
     "demo"
   ],
-  "author": "GitHub",
+  "author": "jasonz001",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^8.2.3"
+  },
+  "dependencies": {
+    "xml2js": "^0.4.23"
   }
 }
