--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Age of Empires 3 Hotkey",
+  "name": "aoe3hotkeys",
   "productName": "Age of Empires 3 Hotkey",
   "version": "1.1.0",
   "description": "Age of Empires 3 hotkey editing tool.",
