--- a/package.json
+++ b/package.json
@@ -189,7 +189,7 @@
     "@types/history": "^4.7.5",
     "@types/jest": "^24.9.1",
     "@types/node": "^12",
-    "@types/react": "^16.9.17",
+    "@types/react": "16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.6",
     "@types/react-router": "^5.1.5",
